--- a/style.css
+++ b/style.css
@@ -1,94 +1,95 @@
-*{
-    /* border: solid red 1px; */
+* {
+    border: solid red 1px;
     box-sizing: border-box;
+
 }
 
 html,
 body {
-    font-family:Arial,sans-serif;
-    font-size: 13px;
+    font-family: Arial, sans-serif;
     margin: 0px;
     padding: 0px;
+}
+
+div {
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+}
+
+.container {
+    height: 100%;
+    background-color: #004494;
+}
+
+.white-link {
+    color: white;
+    text-decoration: none;
+}
+.white-link:hover {
+    text-decoration: underline;
+}
+.color-white {
     color: white;
 }
-h2, h3 {
-    margin: 0px;
-    padding: 0px;
+
+.grow-1 {
+    flex-grow: 1;
 }
 
-.main-div {
-    height: 800px;
-    background-color: #004494;
-    display: flex;
+.grow-2 {
+    flex-grow: 2;
+}
+
+.justify-center {
     justify-content: center;
-
 }
 
-.first-child {
-    width: 996px;
-    max-width:100% ;
-    display: flex;
+.column {
     flex-direction: column;
-    gap: 10px;
+}
+
+.row {
+    flex-direction: row;
+}
+
+.margin-0 {
+    margin: 0px;
+}
+
+.height-800 {
+    height: 800px;
+}
+
+.max-width {
+    max-width: 1100px;
+}
+
+.min-width-334 {
+    min-width: 334px;
 }
 
 .divider {
-    height: 1px;
-    background-color: white;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.445);
+}
+.gap-row-16 {
+    row-gap: 16px;
+}
+.gap-row-32 {
+    row-gap: 32px;
+}
+.gap-column-16{
+    column-gap: 16px;
+}
+.gap-row-8{
+    row-gap: 8px;
 }
 
-.second-child {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 20px;
+.padding-32{
+    padding: 32px;
 }
 
-.second-child-fat {
-    flex-direction: row;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    gap: 25px;
-}
-
-.third-child {
-    display: flex;
-    gap: 1px;
-}
-.third-child1 {
-    display: flex;
-    flex-direction: column;
-    width: 33%;
-    margin: 20px 0px 10px 0px;
-    row-gap: 15px;
-
-}
-
-.third-child2 {
-    display: flex;
-    flex-direction: column;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-    font-size: 12px;
-}
-
-.altezza {
-    height: 40px;
-}
-
-.ul-margin {
-    margin: 0px;
-}
-img {
-    margin: 0px 3px 0px 0px;
-    /* align-items: last baseline; */
-}
-.padding {
-   padding: 0px;
-}
+.margin-bottom{
+    margin-bottom: 8px;
+}  
